recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:1: error: Missing closing brace `}' assumed here
def retourEnPlace(length:Double, angle:Double) {
^Tree:1: error: expected class or object definition
def retourEnPlace(length:Double, angle:Double) {
^Tree:9: error: expected class or object definition
def subTree(steps:Int, length:Double, angle:Double, shrink:Double, gauche:Boolean)    {
^